igt@xe_drm_fdinfo@drm-active - incomplete - BUG: sleeping function called from invalid context at kernel/locking/mutex.c*
<6> [310.180621] Console: switching to colour dummy device 80x25
<6> [310.180901] [IGT] xe_drm_fdinfo: executing
<6> [310.189926] [IGT] xe_drm_fdinfo: starting subtest drm-active
<3> [310.193783] BUG: sleeping function called from invalid context at kernel/locking/mutex.c:585
<3> [310.193821] in_atomic(): 1, irqs_disabled(): 0, non_block: 0, pid: 1233, name: xe_drm_fdinfo
<3> [310.193829] preempt_count: 1, expected: 0
<3> [310.193833] RCU nest depth: 0, expected: 0
<4> [310.193838] 3 locks held by xe_drm_fdinfo/1233:
<4> [310.193839] #0: ffff888108f8c858 (&p->lock){+.+.}-{3:3}, at: seq_read_iter+0x59/0x480
<4> [310.193848] #1: ffff88811576f540 (&client->bos_lock){+.+.}-{2:2}, at: show_meminfo+0xc6/0x250 [xe]
<4> [310.193898] #2: ffff88811d7551a0 (reservation_ww_class_mutex){+.+.}-{3:3}, at: ww_mutex_trylock+0x1ad/0x390
<4> [310.193905] CPU: 10 UID: 0 PID: 1233 Comm: xe_drm_fdinfo Tainted: G U 6.11.0-rc3-xe #1
<4> [310.193907] Tainted: [U]=USER
<4> [310.193908] Hardware name: ASUS System Product Name/PRIME Z790-P WIFI, BIOS 0812 02/24/2023
<4> [310.193909] Call Trace:
<4> [310.193910] <TASK>
<4> [310.193911] dump_stack_lvl+0xa0/0xc0
<4> [310.193915] dump_stack+0x10/0x20
<4> [310.193917] __might_resched+0x165/0x2a0
<4> [310.193920] __might_sleep+0x58/0x90
<4> [310.193922] __mutex_lock+0x55/0xde0
<4> [310.193925] ? xe_ttm_vram_mgr_del+0x26/0x70 [xe]
<4> [310.193983] ? find_held_lock+0x31/0x90
<4> [310.193987] mutex_lock_nested+0x1b/0x30
<4> [310.193989] ? mutex_lock_nested+0x1b/0x30
<4> [310.193990] xe_ttm_vram_mgr_del+0x26/0x70 [xe]
<4> [310.194043] ttm_resource_free+0x86/0xc0 [ttm]
<4> [310.194049] ttm_bo_cleanup_memtype_use+0x3f/0x50 [ttm]
<4> [310.194053] ttm_bo_release+0x19f/0x320 [ttm]
<4> [310.194056] ? dma_resv_iter_first_unlocked+0x1b3/0x280
<4> [310.194060] ? dma_resv_test_signaled+0x34/0xd0
<4> [310.194062] ttm_bo_put+0x34/0x50 [ttm]
<4> [310.194066] xe_gem_object_free+0x1b/0x30 [xe]
<4> [310.194096] drm_gem_object_free+0x1a/0x30 [drm]
<4> [310.194122] show_meminfo+0x1e6/0x250 [xe]
<4> [310.194163] xe_drm_client_fdinfo+0x30/0x6b0 [xe]
<4> [310.194195] ? __drm_printfn_seq_file+0x1c/0x30 [drm]
<4> [310.194213] ? drm_printf+0x62/0x80 [drm]
<4> [310.194231] drm_show_fdinfo+0xb1/0x120 [drm]
<4> [310.194251] ? __pfx___drm_printfn_seq_file+0x10/0x10 [drm]
<4> [310.194267] ? __pfx___drm_puts_seq_file+0x10/0x10 [drm]
<4> [310.194282] seq_show+0x1f0/0x390
<4> [310.194287] seq_read_iter+0x128/0x480
<4> [310.194291] seq_read+0xfc/0x140
<4> [310.194295] vfs_read+0xc0/0x350
<4> [310.194297] ? find_held_lock+0x31/0x90
<4> [310.194300] ? free_to_partial_list+0x3da/0x5f0
<4> [310.194302] ? lock_release+0xd1/0x2a0
<4> [310.194305] ksys_read+0x6d/0xf0
<4> [310.194307] __x64_sys_read+0x1a/0x20
<4> [310.194309] x64_sys_call+0x1715/0x20d0
<4> [310.194311] do_syscall_64+0x85/0x140
<4> [310.194314] ? __slab_free+0x1a6/0x310
<4> [310.194316] ? call_rcu+0xe/0x20
<4> [310.194319] ? put_object+0x32/0x50